--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Glava news</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\Glavanews.png"
+      style="max-width: 100%;height: auto;">
+    <h1>Glava news!</h1>
+
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+  </header>
+
+  <h2>The latest news in Glava, Sweden</h2>
+
+  <section class="grid-parent">
+
+    <div class="grid-child1" border-sizing: border-box>
+
+      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\trolljegeren2.jpg"
+        alt="Skogstur" width="500" height="250" style="max-width: 100%;height: auto;">
+    </div>
+
+    <div class="grid-child2" border-sizing: border-box>
+      <h2>Man sees troll!</h2>
+      <p>It was a late afternoon when Alf Simonsson was walking his dog. He heard a strange noise in the woods close
+        to
+        the gravel road and went to investigate. When he had walked 200 meters into the forest he heard the noise
+        again.
+        His
+        dog started barking at what he first thought was a rock but when the rock started moving he saw that it was in
+        fact a troll! Haven't heard of trolls? Click <a
+          href="https://www.google.com/search?q=troll&oq=troll&aqs=chrome.0.0i131i433i512j46i131i340i433i512j46i131i433i512l2j0i131i433i512l2j46i131i433i512j0i131i433i650j0i131i433i512.3319j0j7&sourceid=chrome&ie=UTF-8">this
+          link</a> to see some Google results.
+      </p>
+    </div>
+  </section>
+
+  <h3>Older news</h3>
+
+  <section class="flex-parent">
+
+    <div class="flex-child 1">
+
+      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\atm surprised.jpg"
+        alt="surprised" width="100%" height="150" style="max-width: 100%;height: auto;">
+      <h4>Atm-machine</h4>
+      <p>The village has got an ATM machine! We no longer have to go to Arvika to use the ATM, thanks to Ica Nära
+        who's
+        just installed a new one right in the middle of Glava. The machine comes in perfect timing, since all Sweden
+        is
+        going more and more digitalized, and fewer people use actual money anymore.</p>
+    </div>
+
+
+    <div class="flex-child 2">
+      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\people forest.jpg"
+        alt="tourists" width="100%" height="150" style="max-width: 100%;height: auto;">
+      <h4>Glaskogen is on fire</h4>
+      <p>No, not on actual fire! But it's a super hot destination for tourists and they're breaking the visiting records
+        from last year. Read what some of the residents in glava think about the tourist boom by hovering the pointer
+        over
+        their images below.
+      </p>
+    </div>
+
+
+    <div class="flex-child 3">
+      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\man funny.jpg"
+        alt="local" width="100%" height="150" style="max-width: 100%;height: auto;">
+      <h4>Read the locals thoughts about the tourists</h4>
+      <p>What does the locas think about all the tourists coming to Glaskogen? Are they happy or annoyed about it? Read
+        it
+        all here! </p>
+    </div>
+
+    <div class="flex-child 4">
+      <img
+        src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\postwoman on bike.jpg"
+        alt="mysterious woman" width="100%" height="150" style="max-width: 100%;height: auto;">
+      <h4>Mysterious woman on bike</h4>
+      <p>The police got a lot of calls about a mysterious woman on a bicycle. After ivestigating the matter police
+        confirms it was just the new postal delivery woman.</p>
+    </div>
+
+  </section>
+</body>
+
 </html>
