--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <section class="big-news">
       <!-- The big news content -->
     </section>
-
+    <div></div>
     <section class="">
       <!-- The other news  -->
     </section>
