add latest news section, add some styling

--- a/code/index.html
+++ b/code/index.html
@@ -67,6 +67,38 @@
           </div>
         </section>
 
+        <section class="latest-news">
+          <div class="latest-container">
+            <h2 class="latest-header">Latest News</h2>
+            <div class="latest-news__articles">
+              <div class="latest-article">
+                <h3 class="latest-article__title">
+                  Steam Deck gains popularity
+                </h3>
+                <p class="latest-article__content">
+                  SteamOS overtakes MacOS as 2nd most popular gaming OS
+                </p>
+              </div>
+              <div class="latest-article">
+                <h3 class="latest-article__title">
+                  Diablo 4 Patch notes for update 1.1.1
+                </h3>
+                <p class="latest-article__content">
+                  Blizzard releases complete patch notes ahead of time
+                </p>
+              </div>
+              <div class="latest-article">
+                <h3 class="latest-article__title">
+                  Steam Deck gains popularity
+                </h3>
+                <p class="latest-article__content">
+                  SteamOS overtakes MacOS as 2nd most popular gaming OS
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="small-news">
           <!-- The other news  -->
           <div class="small-news__article">
