edit and style navbars

--- a/code/index.html
+++ b/code/index.html
@@ -18,13 +18,15 @@
       <header>
         <!-- Some kind of logo and navbar -->
         <nav class="upper-nav">
-          <a
-            href="https://www.freepik.com/free-vector/cute-shiba-inu-dog-gamer-holding-keyboard-with-headphone-cartoon-vector-icon-illustration-animal_29660032.htm#query=dog%20gaming%20logo&position=5&from_view=keyword&track=ais"
-            target="_blank"
-          >
-            <img src="./images/5800_9_03.jpg" alt="logo" class="logo" />
-          </a>
-          <h1 class="site-title">GameNews</h1>
+          <div class="title-logo">
+            <a
+              href="https://www.freepik.com/free-vector/cute-shiba-inu-dog-gamer-holding-keyboard-with-headphone-cartoon-vector-icon-illustration-animal_29660032.htm#query=dog%20gaming%20logo&position=5&from_view=keyword&track=ais"
+              target="_blank"
+            >
+              <img src="./images/5800_9_03.png" alt="logo" class="logo" />
+            </a>
+            <h1 class="site-title">GameNews</h1>
+          </div>
           <ul class="top-nav-links">
             <li>Home</li>
             <li>PC</li>
@@ -32,6 +34,12 @@
             <li>Nintendo</li>
             <li>XBOX</li>
           </ul>
+          <div class="search-box">
+            <input type="text" placeholder="Search..." class="search" />
+            <button type="submit" class="search-button">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
         </nav>
         <nav class="site-nav">
           <ul class="nav-menu">
@@ -42,12 +50,6 @@
             <li class="nav-menu-items">Final Fantasy XVI</li>
             <li class="nav-menu-items">Zelda: Tears of the Kingdom</li>
           </ul>
-          <div class="search-box">
-            <input type="text" placeholder="Search..." class="search" />
-            <button type="submit" class="search-button">
-              <i class="fa fa-search"></i>
-            </button>
-          </div>
         </nav>
       </header>
 
