Added previous code

--- a/code/index.html
+++ b/code/index.html
@@ -19,5 +19,25 @@
     <section class="">
       <!-- The other news  -->
     </section>
+
+    <h1>The New Amsterdam Times</h1>
+    <h2>Out of print since 1664</h2>
+    <p class="box-one">
+        Top story
+    </p>
+    <p class="box-two">
+        Not so top story
+    </p>
+
+    <section class="flex-parent">
+
+    <div class="flex-child yellow"></div>
+    <div class="flex-child green"></div>
+    <div class="flex-child blue"></div>
+    <div class="flex-child brown"></div>
+    <div class="flex-child yellow"></div>
+    <div class="flex-child green"></div>
+    <div class="flex-child blue"></div>
+    <div class="flex-child brown"></div>
   </body>
 </html>
