--- a/code/index.html
+++ b/code/index.html
@@ -10,10 +10,8 @@
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
-    <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\Glavanews.png"
-      style="max-width: 100%;height: auto;">
-    <h1>Glava news!</h1>
+    <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\Glavanews.png">
+    <h1>Glava news</h1>
 
     <ul>
       <li><a href="#home">Home</a></li>
@@ -26,21 +24,22 @@
   <h2>The latest news in Glava, Sweden</h2>
 
   <section class="grid-parent">
-
     <div class="grid-child1" border-sizing: border-box>
 
       <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\trolljegeren2.jpg"
-        alt="Skogstur" width="500" height="250" style="max-width: 100%;height: auto;">
+        alt="Skogstur" width="500" height="250" style="max-width: 100%; height: auto;" />
     </div>
 
     <div class="grid-child2" border-sizing: border-box>
       <h2>Man sees troll!</h2>
-      <p>It was a late afternoon when Alf Simonsson was walking his dog. He heard a strange noise in the woods close
+      <p>
+        It was a late afternoon when Kalle på Berget (Kalle Svensson) was walking his dog. He heard a strange noise in
+        the woods close
         to
         the gravel road and went to investigate. When he had walked 200 meters into the forest he heard the noise
         again.
         His
-        dog started barking at what he first thought was a rock but when the rock started moving he saw that it was in
+        dog started barking at what he first thought was a rock, but when the rock started moving he saw that it was in
         fact a troll! Haven't heard of trolls? Click <a
           href="https://www.google.com/search?q=troll&oq=troll&aqs=chrome.0.0i131i433i512j46i131i340i433i512j46i131i433i512l2j0i131i433i512l2j46i131i433i512j0i131i433i650j0i131i433i512.3319j0j7&sourceid=chrome&ie=UTF-8">this
           link</a> to see some Google results.
@@ -52,47 +51,60 @@
 
   <section class="flex-parent">
 
-    <div class="flex-child 1">
+    <div class="flex-child">
 
       <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\atm surprised.jpg"
-        alt="surprised" width="100%" height="150" style="max-width: 100%;height: auto;">
-      <h4>Atm-machine</h4>
-      <p>The village has got an ATM machine! We no longer have to go to Arvika to use the ATM, thanks to Ica Nära
-        who's
-        just installed a new one right in the middle of Glava. The machine comes in perfect timing, since all Sweden
-        is
-        going more and more digitalized, and fewer people use actual money anymore.</p>
+        alt="surprised" />
+      <div class="flex-child-content">
+        <h4>Atm-machine</h4>
+        <p>The village has now got an ATM machine! We no longer have to go to Arvika to use the ATM, thanks to Ica Nära
+          Glava
+          who's
+          just installed a new one right in the middle of Glava. The machine comes in perfect timing, since all Sweden
+          is
+          going more and more digitalized, and fewer people use actual money anymore.</p>
+      </div>
     </div>
 
 
-    <div class="flex-child 2">
+    <div class="flex-child">
       <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\people forest.jpg"
-        alt="tourists" width="100%" height="150" style="max-width: 100%;height: auto;">
-      <h4>Glaskogen is on fire</h4>
-      <p>No, not on actual fire! But it's a super hot destination for tourists and they're breaking the visiting records
-        from last year. Read what some of the residents in glava think about the tourist boom by hovering the pointer
-        over
-        their images below.
-      </p>
+        alt="tourists" />
+      <div class="flex-child-content">
+        <h4>Glaskogen is on fire</h4>
+        <p>No, not on actual fire! But it's a super hot destination for tourists, and Glaskogen is now breaking the
+          visiting
+          records from last year. Tourists say they mainly come to explore the forest, bring home some moose poop, and
+          to experience the Glava wilderness. Many seems to appreciate the beaver safaris at the local swimming spots.
+        </p>
+      </div>
     </div>
 
 
-    <div class="flex-child 3">
+    <div class="flex-child">
       <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\man funny.jpg"
-        alt="local" width="100%" height="150" style="max-width: 100%;height: auto;">
-      <h4>Read the locals thoughts about the tourists</h4>
-      <p>What does the locas think about all the tourists coming to Glaskogen? Are they happy or annoyed about it? Read
-        it
-        all here! </p>
+        alt="local" />
+      <div class="flex-child-content">
+        <h4>Read the locals thoughts about the tourists</h4>
+        <p>What does the locas think about all the tourists coming to Glaskogen?
+          After having interviewed half of the population (8 people, to be precise) we can now inform that most of the
+          locals like having the tourists here. "They bring jobs to the village" one woman says. Some are not as happy.
+          Rav-Olle (pictured above) says "The tourists are stealing all the poop! There's no moose poop to be found in
+          the forest nowadays. I've had to change the beads for my bracelets from moose- to dog poop. It stinks!"
+        </p>
+      </div>
     </div>
 
-    <div class="flex-child 4">
+    <div class="flex-child">
       <img
         src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\postwoman on bike.jpg"
-        alt="mysterious woman" width="100%" height="150" style="max-width: 100%;height: auto;">
-      <h4>Mysterious woman on bike</h4>
-      <p>The police got a lot of calls about a mysterious woman on a bicycle. After ivestigating the matter police
-        confirms it was just the new postal delivery woman.</p>
+        alt="mysterious woman" />
+      <div class="flex-child-content">
+        <h4>Mysterious woman on bike</h4>
+        <p>The police got a lot of calls about a mysterious woman on a bicycle. After ivestigating the matter police
+          confirms it was just the new postal delivery woman.
+        </p>
+      </div>
     </div>
 
   </section>
