wrote articles, dabbled with the contact form

--- a/code/about.html
+++ b/code/about.html
@@ -20,23 +20,29 @@
       <a class="nav-button" href="archive.html">ARCHIVE</a>
     </nav>
 
-    <section class="big-news">
-      <h2 class="main-news-title">ABOUT</h2>
-      <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <section class="about">
+      <h2 class="section-title">ABOUT</h2>
+      <p class="page-description">Who are the terriers anyway? Let's find out!</p>
+      <h5>ODETTE</h5>
+      <ul>
+        <img src="odette.jpg" alt="Odette"/>
+      <li>Name: Odette</li>
+      <li>Age: 11 years old</li>
+      <li>Breed: Jack Russell/Cairn terrier mix</li>
+      <li>Likes: Eating (especially Dentastix bones), sleeping, licking people's feet.</li>
+      <li>Dislikes: Being ignored when she is persistently asking for more treats, other dogs (except for Tuutikki), prolonged excercise.</li>
+      <li>Special talents: Joining the choir with her hauntingly beautiful howl when somebody else is singing, always getting her way.</li>
+      </ul>
+      <h5>TUUTIKKI</h5>
+      <ul>
+        <img src="tuutikki.jpg" alt="Tuutikki"/>
+        <li>Name: Tuutikki</li>
+        <li>Age: 2 years old</li>
+        <li>Breed: Jack Russell terrier</li>
+        <li>Likes: Running around, barking, playing tug-of-war with plushies.</li>
+        <li>Dislikes: Car traveling</li>
+        <li>Special talents: Stealing food from people's plates when they aren't looking.</li>
+      </ul>
     </section>
 
     <section class="news-grid">
