--- a/code/contact.html
+++ b/code/contact.html
@@ -21,16 +21,14 @@
     </nav>
 
     <section class="big-news">
-      <h2 class="main-news-title">CONTACT</h2>
-      <p class="main-news">Got any questions, requests or fan mail for the dogs? Do not hesitate to contact us!</p>
-        <form id="contact-form">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" cols="1"/>
-            <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" cols="1" />
-            <label for="feedback">Feedback</label>
-            <input type="textarea" id="feedback" name="feedback" rows="1" cols="20" placeholder="Write your feedback here." />
-            </form>
+      <h2 class="section-title">CONTACT</h2>
+      <p class="page-description">Got any questions, requests or fan mail for the dogs? Do not hesitate to contact us!</p>
+
+      <form id="contact-form">
+        <input type="text" id="name" name="name" placeholder="Your name" />
+        <input type="email" id="email" name="email" placeholder="E-mail" />
+        <input type="textarea" id="feedback" name="feedback" placeholder="Write your feedback here.">
+      </form>
     </section>
 
     <section class="news-grid">
