--- a/code/index.html
+++ b/code/index.html
@@ -21,41 +21,33 @@
     </nav>
 
     <section class="big-news">
-      <h2 class="main-news-title">TITLE OF MAIN NEWS ARTICLE</h2>
+      <h2 class="section-title">BREAKING: A WILD CHASE IN THE HEAT!</h2>
       <h4>Published 31/7/2023 16:44</h4>
-      <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="main-news"><img src="odettechase.jpg" alt="Odette after the chase." width="200px">
+      She has done it again, folks. Looking at 11-year-old Odette and her daily antics, you would not guess how fast this Jack-Cairn lady can run when given the chance.<br/><br/>
+        This dog doesn't particularly enjoy excercise - except when there's an element of chase tied to it", a source tells Terrier Times. On Monday the 31st of July, Odette managed to wiggle herself out of her harness during her afternoon walk.<br/><br/>
+        She was chased around the neighbourhood for almost two hours before getting caught.
+        The day was quite hot, and as Odette has quite a thick fur, she tired herself out eventually and gave the worried search party a chance to get her to safety. An adventure like this could be quite dangerous for and old dog with a thick fur.
+          "Her heart was beating quite fast for a while there, but luckily it calmed down after a while", the owner says wth relief.
+      </p>
     </section>
 
     <section class="news-grid">
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
+        <h3>DOG TREAT REVIEW: DENTASTIX</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
+        <h3>ARMI: THE CAT BEHIND THE DOGS</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
+        <h3>DOG PARK: PAWS UP OR DOWN?</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
